plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '7.1.0'
}

group = 'win.pluvivanto'
version = '2.0.0'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

javadoc {
	source = sourceSets.main.allJava
	destinationDir = file("${buildDir}/docs/javadoc")
}

repositories {
	mavenCentral()
}

dependencies {
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    annotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(Test) { 
  testLogging {
    events = ['failed']
    exceptionFormat = 'full'
	showCauses = true
    showExceptions = true
  }
}

spotless {
  java {
	importOrder()
    removeUnusedImports()
    removeWildcardImports()
	cleanthat()
    googleJavaFormat()
    formatAnnotations()
  }
}

// Auto-apply formatting before compilation
compileJava.dependsOn spotlessApply
compileTestJava.dependsOn spotlessApply